--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,30 @@
 .open {
   outline: 1px solid hsl(0deg 50% 50%);
 }
+
+.answer-note {
+  text-align: center;
+  color: hsl(0deg 50% 50%);
+  font-size: 1.2rem;
+}
+
+.answer-input {
+  width: 100%;
+  height: 2rem;
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+.answer-button {
+  background-color: hsl(0deg 50% 50%);
+  margin: 0 auto;
+  width: 30%;
+  text-align: center;
+  color: white;
+  cursor: pointer;
+  margin-top: 0.5rem;
+  height: 3rem;
+  display: grid;
+  place-items: center;
+  border-radius: 0.5rem;
+}
