--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   text-align: center;
   padding: 1rem;
   border-bottom: 0.05rem solid hsl(0deg 50% 50%);
+  margin-bottom: 1rem;
 }
 
 .count-container {
@@ -56,7 +57,7 @@
   font-size: 1.5rem;
 }
 
-.answer-button {
+.post-button {
   background-color: hsl(0deg 50% 50%);
   margin: 0 auto;
   width: 30%;
@@ -68,4 +69,31 @@
   display: grid;
   place-items: center;
   border-radius: 0.5rem;
+}
+
+.change-mode-button {
+  background-color: #918d40;
+  margin: 0 auto;
+  width: 100%;
+  text-align: center;
+  color: white;
+  cursor: pointer;
+  margin-top: 2rem;
+  height: 3rem;
+  display: grid;
+  place-items: center;
+  border-radius: 0.5rem;
+}
+
+.create-input {
+  width: 100%;
+  height: 7rem;
+  border-radius: 0.3rem;
+  box-sizing: border-box;
+}
+
+.create-select {
+  width: 100%;
+  height: 2rem;
+  border-radius: 0.3rem;
 }
