--- a/src/App.css
+++ b/src/App.css
@@ -97,3 +97,16 @@
   height: 2rem;
   border-radius: 0.3rem;
 }
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: all 500ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
