--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,8 @@
 .char-box {
   width: 16.66%;
   height: 4rem;
+  display: flex;
+  justify-content: center;
 }
 
 .char-box-inner {
@@ -55,6 +57,7 @@
   height: 2rem;
   text-align: center;
   font-size: 1.5rem;
+  box-sizing: border-box;
 }
 
 .post-button {
