--- a/src/App.css
+++ b/src/App.css
@@ -43,10 +43,13 @@
   background-color: hsl(0deg 50% 50%);
   color: white;
   cursor: pointer;
+  font-size: 130%;
 }
 
 .open {
-  outline: 1px solid hsl(0deg 50% 50%);
+  outline: 2px solid hsl(0deg 50% 50%);
+  background-color: hsl(0deg 5% 95%);
+  font-size: 160%;
 }
 
 .answer-note {
