--- a/src/App.css
+++ b/src/App.css
@@ -119,3 +119,12 @@
 .ReactModal__Overlay--before-close {
   opacity: 0;
 }
+
+.non-style-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  appearance: none;
+}
