--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,7 @@
   margin: 0 auto;
   width: 30%;
   text-align: center;
+  padding: 0 1rem;
   color: white;
   cursor: pointer;
   margin-top: 0.5rem;
