--- a/src/App.css
+++ b/src/App.css
@@ -71,35 +71,6 @@
   box-sizing: border-box;
 }
 
-.post-button {
-  background-color: hsl(0deg 50% 50%);
-  margin: 0 auto;
-  width: 35%;
-  text-align: center;
-  padding: 0 1rem;
-  color: white;
-  cursor: pointer;
-  margin-top: 0.5rem;
-  height: 3rem;
-  display: grid;
-  place-items: center;
-  border-radius: 0.5rem;
-}
-
-.change-mode-button {
-  background-color: #918d40;
-  margin: 0 auto;
-  width: 100%;
-  text-align: center;
-  color: white;
-  cursor: pointer;
-  margin-top: 2rem;
-  height: 3rem;
-  display: grid;
-  place-items: center;
-  border-radius: 0.5rem;
-}
-
 .create-input {
   width: 100%;
   height: 7rem;
@@ -135,12 +106,43 @@
   appearance: none;
 }
 
-.disabled {
-  background-color: #cccccc;
-  cursor: not-allowed;
+/* button */
+.button-base {
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  text-align: center;
 }
 
-.flex-center {
-  display: flex;
-  justify-content: center;
+.button-disabled {
+  background-color: #cccccc !important;
+  cursor: not-allowed !important;
+}
+
+.button-color-red {
+  background-color: hsl(0deg 50% 50%);
+  color: white;
+}
+
+.button-color-green {
+  background-color: #918d40;
+  color: white;
+}
+
+.button-width-middle {
+  width: 11rem;
+  height: 3rem;
+  border-radius: 0.5rem;
+}
+
+.button-width-large {
+  width: 10rem;
+  height: 3rem;
+  border-radius: 0.5rem;
+}
+
+.button-width-full {
+  width: 100%;
+  height: 3rem;
+  border-radius: 0.5rem;
 }
