--- a/src/App.css
+++ b/src/App.css
@@ -26,20 +26,14 @@
 }
 
 .char-box-container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  gap: 0.6rem;
+  grid-template-columns: repeat(6, 1fr);
 }
 
 .char-box {
-  width: 16.66%;
-  height: 4rem;
-  display: flex;
-  justify-content: center;
-}
-
-.char-box-inner {
-  width: 85%;
-  height: 85%;
+  height: 3.6rem;
+  width: 100%;
   display: grid;
   place-items: center;
   border-radius: 0.7rem;
