--- a/src/App.css
+++ b/src/App.css
@@ -127,16 +127,19 @@
   width: 11rem;
   height: 3rem;
   border-radius: 0.5rem;
+  outline: auto;
 }
 
 .button-width-large {
   width: 10rem;
   height: 3rem;
   border-radius: 0.5rem;
+  outline: auto;
 }
 
 .button-width-full {
   width: 100%;
   height: 3rem;
   border-radius: 0.5rem;
+  outline: auto;
 }
