--- a/src/App.css
+++ b/src/App.css
@@ -140,3 +140,13 @@
   height: 3rem;
   border-radius: 0.5rem;
 }
+
+.button-reset {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  appearance: none;
+  font: inherit;
+}
