--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,11 @@
   color: white;
 }
 
+.bg-blue {
+  background-color: #1e90ff;
+  color: white;
+}
+
 .button-width-middle {
   width: 11rem;
   height: 3rem;
