--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,17 @@
   appearance: none;
 }
 
+.date-panel {
+  text-align: center;
+  outline: solid 0.5px gray;
+  height: 3.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+  position: relative;
+}
+
 /* button */
 .button-base {
   display: grid;
